--- a/ansible/roles/checklist/tasks/main.yml
+++ b/ansible/roles/checklist/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
-- name: Instalando pacotes essenciais APT - CENTOS
+- name: Instalando pacotes essenciais APT
   apt:
    name: "{{pacotes}}"
    state: present
   when: ansible_pkg_mgr == "apt"
 
-- name: Instalando pacotes essenciais YUM - DEBIAN
+- name: Instalando pacotes essenciais YUM
   yum:
    name: "{{pacotes}}"
    state: present
